sumo/tests/sumo/errors/duplicates/vehicleid_emitteremission/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Warning: MSTriggeredSource emitter: Vehicle 1 already exists.
 Generating a default id.
